--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<form>
+		<label for="name" >Name</label>
+		<input placeholder="Name" type="text" id="name" required>
+		<label for="Email">EMail</label>
+		<input placeholder="Email" type="email" id="email" required>
+		
+		
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
