--- a/main.html
+++ b/main.html
@@ -12,8 +12,10 @@
 		<input placeholder="Name" type="text" id="name" required>
 		<label for="Email">EMail</label>
 		<input placeholder="Email" type="email" id="email" required>
-		
-		
+		<label for="gender_m">Male</label>
+        <input type="radio" id="gender_m" name="gender" required/>	
+		<label for="gender_f">Female</label>
+		<input type="radio" id="gender_f" name="gender" required/>		
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
