--- a/main.html
+++ b/main.html
@@ -15,8 +15,17 @@
 		<label for="gender_m">Male</label>
         <input type="radio" id="gender_m" name="gender" required/>	
 		<label for="gender_f">Female</label>
-		<input type="radio" id="gender_f" name="gender" required/>		
+		<input type="radio" id="gender_f" name="gender" required/>	<br>	
+	<label for="cars">Select a car</label>
+	<select placeholder="--Please choose an option--">
+		<option>BMW</option>
+		<option>FORTUNER</option>
+		<option>VITARA BREEZA</option>
+	</select>
+		<label for="age" >Age</label>
+		<input type="number" 
 	</form>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
