--- a/main.html
+++ b/main.html
@@ -23,7 +23,15 @@
 		<option>VITARA BREEZA</option>
 	</select>
 		<label for="age" >Age</label>
-		<input type="number" 
+		<input placeholder="Age" type="number" id="age" required/>
+		<label for="dob" >DOB</label>
+		<input type="date" id="dob" required>
+		<label for="tel">Phone Number</label>
+		<input placeholder="***-***-****" type="tel" id="tel"/>
+		<label for="password" >Password</label>
+		<input placeholder="password" type="password" id="password" required/>
+		
+		
 	</form>
 	
 	<!-- the entire body must be written by student -->
