--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
 		<label for="age" >Age</label>
 		<input placeholder="Age" type="number" id="age" required/>
 		<label for="dob" >DOB</label>
-		<input type="date" id="dob" required>
+		<input type="date" id="dob" required><br>
 		<label for="tel">Phone Number</label>
 		<input placeholder="***-***-****" type="tel" id="tel"/>
 		<label for="password" >Password</label>
