--- a/main.html
+++ b/main.html
@@ -30,8 +30,8 @@
 		<input placeholder="***-***-****" type="tel" id="tel"/>
 		<label for="password" >Password</label>
 		<input placeholder="password" type="password" id="password" required/>
-		
-		
+		<label for="tos">I agree to the TOS</label>
+		<input placeholder="checkbox" type="checkbox" id="tos">
 	</form>
 	
 	<!-- the entire body must be written by student -->
