--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 		<label for="tel">Phone Number</label>
 		<input placeholder="***-***-****" type="tel" id="tel"/>
 		<label for="password" >Password</label>
-		<input placeholder="password" type="password" id="password" required/>
+		<input placeholder="password" type="password" id="password" required/><br>
 		<label for="tos">I agree to the TOS</label>
 		<input placeholder="checkbox" type="checkbox" id="tos">
 	</form>
