--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form>
+	<form method="post">
 		<label for="name" >Name</label>
 		<input placeholder="Name" type="text" id="name" required>
 		<label for="Email">EMail</label>
